--- a/src/components/fragments/slot-card.pug
+++ b/src/components/fragments/slot-card.pug
@@ -6,7 +6,11 @@ mixin slotCard(item)
             img(src=`img/${item.img}` alt="")
             .slot-card__btns
                 each btn in item.btns 
-                    +button(btn.modificator, btn.text)
+                    if btn.isDemo
+                        button.btn.js-modal__open(class=`${btn.modificator ? btn.modificator : ''}` data-modal-title="Sugar Rush Demo" data-modal-url="https://demogamesfree.pragmaticplay.net/gs2c/openGame.do?gameSymbol=vs20sugarrush&websiteUrl=https%3A%2F%2Fdemogamesfree.pragmaticplay.net&jurisdiction=99&lobby_url=https%3A%2F%2Fwww.pragmaticplay.com%2Fen%2F&lang=EN&cur=USD") 
+                            | #{btn.text}
+                    else 
+                        +button(btn.modificator, btn.text)
         p.slot-card__name= item.name
         p.slot-card__provider= item.provider
 
