--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -89,6 +89,7 @@ html(lang="en")
 
         include ../components/fragments/go-up.pug
         include ../components/blocks/footer.pug
+        include ../components/blocks/modal.pug
         include ../components/fragments/mob-btn.pug
 
         script(src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js")
