--- a/src/scss/fragments/author-row.scss
+++ b/src/scss/fragments/author-row.scss
@@ -22,6 +22,14 @@
     &__name {
         color: var(--text-main, #2b2b2b);
         @include font-xl-medium;
+
+        &:is(a) {
+            cursor: pointer;
+            @include transition(color);
+            @include hoverActiveFocus {
+                color: var(--accent-base, #3b8ffe);
+            }
+        }
     }
 
     &__position {
