--- a/src/components/blocks/section-hero.pug
+++ b/src/components/blocks/section-hero.pug
@@ -1,3 +1,4 @@
+include /layouts/base.pug
 section.wrapper.section-hero
     h1 Sugar Rush Slot Online
     span.section-hero__rating(style="--rating: 4.8;") 4.8
