--- a/src/components/fragments/button.pug
+++ b/src/components/fragments/button.pug
@@ -1,4 +1,5 @@
 //- @mixin
+include /mixins/icons.pug
 mixin button(modificator, text, svgItem, svgEnd)
     button(
         class=`btn sf-link ${modificator}` 
