--- a/src/components/fragments/how-to.pug
+++ b/src/components/fragments/how-to.pug
@@ -1,5 +1,7 @@
 //- @defaultData = howTo
 //- @mixin
+include /components/fragments/button.pug
+include /mixins/icons.pug
 mixin howTo(list)
     ol.how-to
         each item in list 
