--- a/src/components/fragments/slot-card.pug
+++ b/src/components/fragments/slot-card.pug
@@ -1,5 +1,7 @@
 //- @defaultData = slotCards[0]
 //- @mixin
+include /components/fragments/button.pug
+include /mixins/icons.pug
 mixin slotCard(item)
     li.slot-card
         .slot-card__wrap 
