--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -1,4 +1,4 @@
-// AUTO-INJECT-START
+//- AUTO-INJECT-START
 include /components/fragments/bonus-card.pug
 include /components/fragments/button.pug
 include /components/fragments/gallery.pug
@@ -7,6 +7,6 @@ include /components/fragments/listing.pug
 include /components/fragments/pros-cons.pug
 include /components/fragments/slot-card.pug
 include /components/fragments/table.pug
-// AUTO-INJECT-END
+//- AUTO-INJECT-END
 include /mixins/icons.pug
 block content
