--- a/src/scss/editor-content.scss
+++ b/src/scss/editor-content.scss
@@ -107,7 +107,7 @@ ul.wp-block-list {
         &::before {
             content: "";
             position: absolute;
-            top: 50%;
+            top: 13px;
             left: 0;
             width: 11px;
             height: 11px;
