--- a/src/components/fragments/table.pug
+++ b/src/components/fragments/table.pug
@@ -1,5 +1,7 @@
 //- @defaultData = table, true
 //- @mixin
+include /components/fragments/button.pug
+include /mixins/icons.pug
 mixin table(table,  isScroll)
     if isScroll
         .table(class=`${table.modificator ? table.modificator : ''}`).js-scroll-list
