--- a/src/scss/blocks/banner.scss
+++ b/src/scss/blocks/banner.scss
@@ -2,7 +2,7 @@
 
 .banner {
     padding: 24px 442px 24px 24px;
-    @include flex(column, flex-start, center, 16px);
+    @include flex(column, flex-start, center);
     min-height: 263px;
 
     background-color: #6a63ff;
@@ -14,19 +14,19 @@
     color: #fff;
 
     & > * {
-        margin: 0;
         position: relative;
         z-index: 1;
     }
 
     h2 {
         color: #fff;
+        margin: 0;
     }
 
     @include media-max-mlg {
         justify-content: flex-start;
         background-image: url("/img/banner-bg-mob.webp");
-        padding: 24px 24px 81.389vw 24px;
+        padding: 16px 16px 81.389vw 16px;
         background-position: center bottom;
         background-size: 100% auto;
     }
