--- a/src/scss/blocks/section-faq.scss
+++ b/src/scss/blocks/section-faq.scss
@@ -37,7 +37,7 @@
 
     summary {
         @include relative();
-        @include flex(row, center, flex-start, 16px);
+        @include flex(row, flex-start, flex-start, 16px);
         color: var(--text-main, #2b2b2b);
         @include font-lg-medium-fix;
 
