--- a/src/scss/fragments/content-img.scss
+++ b/src/scss/fragments/content-img.scss
@@ -4,9 +4,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 24px;
+    margin-top: 20px;
 
-    &:not(:first-child) {
-        margin-top: 20px;
+    &:first-child {
+        margin-top: 0;
     }
 
     & > *:only-child {
@@ -42,7 +43,16 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        gap: 16px;
+        gap: 0;
+        margin-top: 16px;
+
+        &__content {
+            display: contents;
+        }
+
+        h2 {
+            order: -10;
+        }
 
         & > img {
             width: 100%;
