--- a/src/scss/fragments/how-to.scss
+++ b/src/scss/fragments/how-to.scss
@@ -29,7 +29,7 @@
             @include font-m;
         }
 
-        padding: 16px;
+        padding: 16px 16px 16px 24px;
         border-radius: 16px;
         background: var(--card-secondary-bg, #f9f9f9);
 
@@ -65,6 +65,7 @@
 
     @include media-max-mlg {
         &__item {
+            padding: 16px;
             grid-template-columns: 1fr;
             padding-top: 32px;
         }
