--- a/src/scss/fragments/symbol-cards.scss
+++ b/src/scss/fragments/symbol-cards.scss
@@ -34,7 +34,8 @@
             grid-column: 1 / -1;
         }
 
-        img {
+        img,
+        svg {
             grid-column: 1 / 2;
         }
 
