--- a/src/mixins/icons.pug
+++ b/src/mixins/icons.pug
@@ -1,11 +1,19 @@
 mixin icon(name)
+    if name === 'fb'
+        include /img/svg/fb.svg
     if name === 'go-up'
         include /img/svg/go-up.svg
+    if name === 'inst'
+        include /img/svg/inst.svg
     if name === 'lang-arrow'
         include /img/svg/lang-arrow.svg
     if name === 'test'
         include /img/svg/test.svg
     if name === 'test2'
         include /img/svg/test2.svg
+    if name === 'tg'
+        include /img/svg/tg.svg
     if name === 'toc-arrow'
         include /img/svg/toc-arrow.svg
+    if name === 'x'
+        include /img/svg/x.svg
