--- a/src/scss/fragments/lang.scss
+++ b/src/scss/fragments/lang.scss
@@ -50,6 +50,9 @@
         border-radius: 0 0 16px 16px;
         background: var(--card-bg, #fff);
         overflow: hidden;
+        box-shadow:
+            0 4px 4px 0 rgba(0, 0, 0, 0.02),
+            0 8px 10px 0 rgba(0, 0, 0, 0.04);
 
         overflow-y: auto;
         @include thin-v-scrollbar;
