--- a/src/components/blocks/banner.pug
+++ b/src/components/blocks/banner.pug
@@ -1,5 +1,7 @@
 include /layouts/base.pug
-section.wrapper.banner(style="background-image: ;")
-    h2 Play Sugar Rush
-    p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    +button("btn--primary", "Play for real money")
+section.wrapper.banner
+    .banner__content
+        h2 Play Sugar Rush
+        p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        +button("btn--primary", "Play for real money")
+    img(src="img/sugar-rush-2.png", alt="")
