--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -32,6 +32,10 @@
         grid-template-columns: 1fr auto auto;
         gap: 12px 10px;
 
+        .btn {
+            min-width: 200px;
+        }
+
         @include media-max-sm {
             height: 100%;
             width: 100%;
@@ -44,6 +48,7 @@
             grid-template-rows: auto 1fr auto;
 
             .btn {
+                min-width: unset;
                 width: 100%;
                 grid-column: 1 / -1;
                 grid-row: 3 / 4;
